# pywaterflood

./: .codespellrc  .dockerignore  .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CITATION.cff  CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.jax  Dockerfile_TACC  LICENSE  README.md  noxfile.py  pyproject.toml  pytest.ini  requirements.yml  setup.cfg  tox.ini
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: joss-paper.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  tests.yml
docs/: Makefile  conduct.md  conf.py  example.ipynb  index.md  requirements.txt  rust_header.html
docs/getting-started/: index.md
docs/user-guide/: 7-minutes-to-pywaterflood.ipynb  aquifer.ipynb  buckley-leverett.ipynb  choosing-crm.ipynb  index.md  multiwell-productivity-index.ipynb  using-docker.md
paper/: paper.bib  paper.md
pyCRM/: CRM.py  __init__.py
python/pywaterflood/: __init__.py  _core.pyi  aquifer.py  buckleyleverett.py  crm.py  multiwellproductivity.py
pywaterflood/: __init__.py  buckleyleverett.py  crm.py  multiwellproductivity.py
src/: CRM.py  aquifer.rs  buckleyleverett.rs  crm.rs  lib.rs
testing/: conftest.py  regenerate_results.py  test_CRM.py  test_aquifer.py  test_buckleyleverett.py  test_mpi.py
testing/data/: gain_producer.csv  gains.csv  injection.csv  prediction_noprimary.csv  prediction_noprimary_per-pair.csv  prediction_noprimary_per-producer.csv  prediction_primary_per-pair.csv  prediction_primary_per-producer.csv  production.csv  tau_producer.csv  taus.csv  taus_per-pair.csv  time.csv
