[package]
name = "pywaterflood"
version = "0.3.3"
edition = "2018"


[lib]
name = "_core"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
ndarray = "0.15.6"
numpy = "0.16.2"
pyo3 = { version = "0.16", features = ["extension-module", "abi3-py37"] }

[build]
rustdoc-args = ["--html-in-header", "./docs/rust_header.html", "--no-deps"]
