[project]
name = "pywaterflood"
version = "0.2.1b3"
description = "Physics-inspired waterflood performance modeling"
authors = [{name = "Frank Male", email ="frmale@utexas.edu"}]
license = {file = "LICENSE"}
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Hydrology",
]
requires-python = ">=3.7"
dependencies = [
    "numpy >=1.21",
    "scipy >=1.4",
    "pandas >=1.3.5",
    "openpyxl >=3.0.9",
    "joblib >=1.1.0",
]

[project.optional-dependencies]
test = [
    "pytest >=6.2.5",
    "pytest-cov >=3.0.0",
    "coverage[toml] >=6.3.3",
]
docs = [
    "myst-nb",
    "sphinx",
    "sphinx-autoapi",
    "sphinx-rtd-theme",
]
devwork = [
    "ipykernel",
    "seaborn",
]

[project.urls]
repository = "https://github.com/frank1010111/pywaterflood"
documentation = "https://pywaterflood.readthedocs.io"
"Bug Tracker" = "https://github.com/frank1010111/pywaterflood/issues"

[build-system]
requires = ["maturin>=0.13"]
build-backend = "maturin"

[tool.maturin]
# Include arbitrary files in the sdist
sdist-include = []
compatibility = "manylinux2014"
# Bindings type
bindings = "pyo3"

[tool.coverage.run]
branch = true
source = ["pywaterflood"]
timid = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pyversion",
    "@jit",
    "@njit",
]

[tool.pytest.ini_options]
minversion = "6.0"
markers = [
    "slow: mark test as slow."
]

[tool.isort]
profile = "black"

[tool.black]
line-length = 99

[tool.mypy]
ignore_missing_imports = true
