[metadata]
name = pyCRM
version = 0.1
author = Frank Male
author_email = frmale@utexas.edu
description = Physics-inspired waterflood performance modeling
long_description = file: README.md
url = https://github.com/frank1010111/pyCRM
project_urls =
    Bug Tracker = https://github.com/frank1010111/pyCRM/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Hydrology

[options]
package_dir = 
packages = pyCRM
python_requires = >=3.6
